Ingress defined for k8s-java-sample service.

--- a/devops/ingress.yaml
+++ b/devops/ingress.yaml
@@ -1,9 +1,10 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: k8s-java-sample
+  name: main
   annotations:
     nginx.org/websocket-services: "k8s-java-sample"
+    ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
   - http:
